--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion is the king of the animals">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion is the king of the animals" title="We're here to help you!">
   <!-- Your code here -->
 
 </body>
